--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "a3",
   "description": "An app for Azure",
   "version": "0.0.1",
+  "main": "server.js",
   "dependencies": {
     "koa": "*"
   },
