--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
   "main": "server.js",
   "dependencies": {
     "koa": ">=1.1.1",
+    "koa-body-parser": "*",
     "koa-route": ">=2.4.2",
-    "koa-body-parser": "*"
+    "koa-router": "^5.2.3",
+    "xcheck": "*"
   },
   "devDependencies": {
     "mocha": "*",
