--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "koa": ">=1.1.1",
     "koa-body-parser": "*",
     "koa-route": ">=2.4.2",
-    "koa-router": "^5.2.3",
+    "koa-router": ">=5.2.3",
+    "log4js": ">=0.6.27",
     "xcheck": "*"
   },
   "devDependencies": {
